--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<h3>Hi, I'm in the app component</h3>
-<h5>
-  To generate a new component using Angular Cli use:
-  <strong>ng g c "ComponentName"</strong>
-</h5>
-<app-servers></app-servers>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <h3>Hi, I'm in the app component</h3>
+
+      <app-servers></app-servers>
+    </div>
+  </div>
+</div>
