--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,12 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="container">
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-12 col-lg-12">
       <h3>Hi, I'm in the app component</h3>
 
       <app-servers></app-servers>
+      <app-successalert></app-successalert>
+      <app-warningalert></app-warningalert>
     </div>
   </div>
 </div>
