--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,2 +1,3 @@
+<button class="btn btn-primary" [disabled]="!allowServer">Add Server</button>
 <app-server>1</app-server>
 <app-server>2</app-server>
