--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,3 +1,6 @@
+<label class="form-label">Server Name</label>
+<input type="text" class="form-control" (input)="onUpdateServerName($event)" />
+<P>{{ serverName }}</P>
 <button
   class="btn btn-primary"
   [disabled]="!allowServer"
