--- a/src/app/assignment/assignment.component.html
+++ b/src/app/assignment/assignment.component.html
@@ -1,2 +1,2 @@
-<button (click)="buttonClicked = !buttonClicked">Display Details</button>
+<button (click)="onButtonClick()">Display Details</button>
 <p *ngIf="buttonClicked">Secret Password=tuna</p>
